# clarus-reader

./: .gitignore  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml  release.yml
docs/: RELEASING.md
scripts/: copy-wordnet.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: LibraryModal.tsx  PdfViewer.tsx  SettingsModal.tsx  TitleBar.tsx
src/lib/: ai.ts  library.ts  retrieval.test.ts  retrieval.ts  storage.test.ts  storage.ts  types.ts  wordnet.ts
